# Awesome-LLM-Chatbot-Router

./: .coverage  .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_demo.py  run_demo_upgrade.py  test_api.py  test_e2e_flow.py
app/: health.py  main.py
app/action_flow/: engine.py  entity_extractor.py  validator.py
app/core/: config.py  exceptions.py  logger.py  models.py
app/router/: embed_anything_engine_final.py  embed_config.py  fuser.py  metrics.py  pairwise_resolver.py  preprocess.py  query_cache.py  router_final.py  rule_engine.py  (+3 more)
config/: action_catalog.yaml  keyword_rules.yaml  learning_loop.yaml  pairwise_rules.yaml  route_tuning.yaml  system_config.yaml
docs/: API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_FINAL.md  CONFIGURATION.md  FEEDBACK_INTEGRATION.md  GENERATE_FEEDBACK.md  IMPROVEMENT_RECOMMENDATIONS.md  INTEGRATION_GUIDE.md  LEARNING_SYSTEM_ANALYSIS.md  SYSTEM_EVALUATION_REPORT.md  USER_MANUAL.md  architecture_comparison.md  architecture_v2_final.md  architecture_v2_production.md  bao-cao-hybrid-router.md  learning_loop.md
frontend/: package-lock.json  package.json
scripts/: __init__.py  auto_learning.py  auto_tuner.py  e2e_check.py  generate_feedback.py  learning_review.py  probe_embed.py  run_server.py  test_extraction.py  test_feedback_e2e.py  test_live_server.py  verify_implementation.py
tests/: test_action_flow_upgrade.py  test_api_config.py  test_auto_tuner.py  test_e2e_integration.py  test_entity_extractor.py  test_feedback_integration.py  test_generate_feedback.py  test_memory_cleanup.py
(+21 files in other folders)
